dev: update multi fields

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
             "osx": {
                 "MIMode": "lldb",
                 "externalConsole":true
-            }
+            },
+            "preLaunchTask": "build",
         },
         {
             "type": "lldb",
